--- a/main.html
+++ b/main.html
@@ -7,6 +7,24 @@
 </head>
 
 <body>
+	 <div class="imageContainer">
+    <img src="https://tse1.mm.bing.net/th?id=OIP.LZfzA1kFwoiz76SeOeEz9gHaE8&pid=Api&P=0&h=220" alt="Architecture Image">
+  </div>
+  
+  <div class="content">
+    <table class="architecture-table">
+      <tr>
+        <td class="image-cell"><img src="https://up.yimg.com/ib/th?id=OIP.W_Xjz0u9zB_dJA8u2tA-rwHaEo&pid=Api&rs=1&c=1&qlt=95&w=169&h=105" alt="Image 1"></td>
+        <td class="text-cell">Architecture is indeed a unique discipline that bridges the gap between artistic expression and scientific precision. On one hand, it celebrates creativity, culture, and aesthetics—transforming spaces into experiences that evoke emotion, reflect identity, and tell stories. Architects use design to create beauty, balance, and harmony, drawing inspiration from nature, history, and human ambition....</td>
+        <td class="image-cell"><img src="https://up.yimg.com/ib/th?id=OIF.3LZSDxUOAcBjtUktV%2BJi1g&pid=Api&rs=1&c=1&qlt=95&w=107&h=107" alt="Image 2"></td>
+      </tr>
+      <tr>
+        <td class="image-cell"><img src="https://tse4.mm.bing.net/th?id=OIP.xyrsa5FmiU46LUcRxJOCaAHaE8&pid=Api&P=0&h=220" alt="Image 3"></td>
+        <td class="text-cell">Modern architecture emphasizes sustainability as a core principle, addressing the pressing environmental challenges of our time while creating functional and aesthetically pleasing spaces. This approach integrates eco-friendly practices, efficient resource use, and innovative technologies to minimize the environmental impact of buildings throughout their life cycles.</td>
+        <td class="image-cell"><img src="https://tse1.mm.bing.net/th?id=OIP._73AHrWKQnSBjv4DnD0JrwHaE7&pid=Api&P=0&h=220" alt="Image 4"></td>
+      </tr>
+    </table>
+  </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
